# OpenCV3-Computer-Vision-Application-Programming-Cookbook-Third-Edition

./: CMakeLists.txt  README.md
Chapter01/: CMakeLists.txt  README.txt  loadDisplaySave.cpp  logo.cpp  mat.cpp
Chapter02/: CMakeLists.txt  README.txt  addImages.cpp  colorReduce.cpp  contrast.cpp  remapping.cpp  saltImage.cpp
Chapter03/: CMakeLists.txt  README.txt  colorDetection.cpp  colordetector.cpp  colordetector.h  extractObject.cpp  huesaturation.cpp
Chapter04/: CMakeLists.txt  README.txt  colorhistogram.h  contentFinder.cpp  contentFinder.h  finder.cpp  histogram.h  histograms.cpp  imageComparator.h  integral.cpp  integral.h  retrieve.cpp  tracking.cpp
Chapter05/: CMakeLists.txt  README.txt  morphology.cpp  mserFeatures.cpp  segment.cpp  watershedSegmentation.h
Chapter06/: CMakeLists.txt  README.txt  derivatives.cpp  filters.cpp  laplacianZC.h
Chapter07/: CMakeLists.txt  README.txt  blobs.cpp  contours.cpp  edgedetector.h  linefinder.h
Chapter08/: CMakeLists.txt  README.txt  harrisDetector.h  interestPoints.cpp
Chapter09/: CMakeLists.txt  README.txt  binaryDescriptors.cpp  matcher.cpp  patches.cpp
Chapter10/: CMakeLists.txt  README.txt  estimateF.cpp  estimateH.cpp  matchingTarget.cpp  robustMatcher.h  robustmatching.cpp  targetMatcher.h
Chapter11/: CMakeLists.txt  CameraCalibrator.cpp  CameraCalibrator.h  README.txt  calib.xml  calibrate.cpp  cameraPose.cpp  estimateE.cpp  stereoMatcher.cpp  triangulate.cpp  triangulate.h
Chapter12/: BGFGSegmentor.h  CMakeLists.txt  README.txt  foreground.cpp  tracking.cpp  videoprocessing.cpp  videoprocessor.h
Chapter13/: CMakeLists.txt  README.txt  featuretracker.h  flow.cpp  oTracker.cpp  tracker.cpp  videoprocessor.h  visualTracker.h
Chapter14/: CMakeLists.txt  README.txt  detectObjects.cpp  recognizeFace.cpp  trainSVM.cpp
images/stopSamples/: neg.txt  stop.txt  trainStop.bat
images/stopSamples/classifier/: cascade.xml  params.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml
